--- a/farm/index.html
+++ b/farm/index.html
@@ -38,28 +38,28 @@
          */
         BitShadowMachine.System.init(function() {
 
-          /*for (var i = 0; i < 10; i++) {
+          for (var i = 0; i < 10; i++) {
             this.add('Box', {
               color: [106, 130, 66],
               zIndex: 2,
               location: new BitShadowMachine.Vector(getRandomNumber(1, worldA.width - 8), getRandomNumber(40, worldA.height - 8)),
               acceleration: new BitShadowMachine.Vector(-2, 0)
             });
-          }*/
+          }
 
           this.add('Anim', {
             location: new BitShadowMachine.Vector(30, 38),
-            frameDuration: 3,
+            frameDuration: 1,
             zIndex: 50,
             frames: frames
           });
 
-          /*this.add('Anim', {
+          this.add('Anim', {
             location: new BitShadowMachine.Vector(100, 4),
             frameDuration: 1,
             zIndex: 2,
             frames: framesBarn
-          });*/
+          });
 
           //
 
