--- a/index.html
+++ b/index.html
@@ -142,6 +142,32 @@
       </div>
     </a>
 
+    <a href="milk/index.html" class="container-feature">
+      <div class="feature-img milk"></div>
+      <div class="feature-details">
+        <div class="feature-details-inner">
+          <div class="container-behavior">MILK</div>
+          <div class="container-vehicle-description">
+            <div class="vehicle-type">Bit Shadow</div>
+            <div class="theme">creamy</div>
+          </div>
+        </div>
+      </div>
+    </a>
+
+    <a href="farm/index.html" class="container-feature">
+      <div class="feature-img farm"></div>
+      <div class="feature-details">
+        <div class="feature-details-inner">
+          <div class="container-behavior">FARM</div>
+          <div class="container-vehicle-description">
+            <div class="vehicle-type">Bit Shadow</div>
+            <div class="theme">moo</div>
+          </div>
+        </div>
+      </div>
+    </a>
+
     <a href="BlueAgents001/index.html" class="container-feature">
       <div class="feature-img blueagents"></div>
       <div class="feature-details">
