--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name='keywords' content='JavaScript, JSConfEU, JSConfEU2013' />
   <meta name='description' content='Examples from my talk on creating natural systems in a web browser.' />
   <meta name='viewport' content='user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0' />
-  <title>JSFest 2014</title>
+  <title>EmpireJS 2014</title>
   <link rel="stylesheet" href="css/main.css" type="text/css" charset="utf-8" />
 </head>
 <body>
@@ -189,6 +189,45 @@
           <div class="container-vehicle-description">
             <div class="vehicle-type">Bit Shadow</div>
             <div class="theme">Stream</div>
+          </div>
+        </div>
+      </div>
+    </a>
+
+    <a href="demo/index.html" class="container-feature">
+      <div class="feature-img demo"></div>
+      <div class="feature-details">
+        <div class="feature-details-inner">
+          <div class="container-behavior">BIT DEMO</div>
+          <div class="container-vehicle-description">
+            <div class="vehicle-type">Bit Shadow</div>
+            <div class="theme">Show me</div>
+          </div>
+        </div>
+      </div>
+    </a>
+
+    <a href="Orbit002/index.html" class="container-feature">
+      <div class="feature-img energy"></div>
+      <div class="feature-details">
+        <div class="feature-details-inner">
+          <div class="container-behavior">ENERGY</div>
+          <div class="container-vehicle-description">
+            <div class="vehicle-type">Bit Shadow</div>
+            <div class="theme">Wah wah</div>
+          </div>
+        </div>
+      </div>
+    </a>
+
+    <a href="Orbit009/index.html" class="container-feature">
+      <div class="feature-img orb"></div>
+      <div class="feature-details">
+        <div class="feature-details-inner">
+          <div class="container-behavior">ORB</div>
+          <div class="container-vehicle-description">
+            <div class="vehicle-type">Bit Shadow</div>
+            <div class="theme">Oooo</div>
           </div>
         </div>
       </div>
