--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name='keywords' content='JavaScript, JSConfEU, JSConfEU2013' />
   <meta name='description' content='Examples from my talk on creating natural systems in a web browser.' />
   <meta name='viewport' content='user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0' />
-  <title>JSFest 2014</title>
+  <title>EmpireJS 2014</title>
   <link rel="stylesheet" href="css/main.css" type="text/css" charset="utf-8" />
 </head>
 <body>
