--- a/index.html
+++ b/index.html
@@ -194,6 +194,44 @@
       </div>
     </a>
 
+    <a href="demo/index.html" class="container-feature">
+      <div class="feature-img demo"></div>
+      <div class="feature-details">
+        <div class="feature-details-inner">
+          <div class="container-behavior">BIT DEMO</div>
+          <div class="container-vehicle-description">
+            <div class="vehicle-type">Bit Shadow</div>
+            <div class="theme">Show me</div>
+          </div>
+        </div>
+      </div>
+    </a>
+
+    <a href="Orbit002/index.html" class="container-feature">
+      <div class="feature-img energy"></div>
+      <div class="feature-details">
+        <div class="feature-details-inner">
+          <div class="container-behavior">ENERGY</div>
+          <div class="container-vehicle-description">
+            <div class="vehicle-type">Bit Shadow</div>
+            <div class="theme">Wah wah</div>
+          </div>
+        </div>
+      </div>
+    </a>
+
+    <a href="Orbit009/index.html" class="container-feature">
+      <div class="feature-img orb"></div>
+      <div class="feature-details">
+        <div class="feature-details-inner">
+          <div class="container-behavior">ORB</div>
+          <div class="container-vehicle-description">
+            <div class="vehicle-type">Bit Shadow</div>
+            <div class="theme">Oooo</div>
+          </div>
+        </div>
+      </div>
+    </a>
   </div>
 </body>
 </html>
