--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv='content-type' content='text/html; charset=UTF-8' />
   <meta name='keywords' content='JavaScript, JSConfEU, JSConfEU2013' />
-  <meta name='description' content='Examples from my talk on creating natural systems in a web browser.' />
+  <meta name='description' content='Examples from my talk on Pixel Art and JavaScript.' />
   <meta name='viewport' content='user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0' />
   <title>EmpireJS 2014</title>
   <link rel="stylesheet" href="css/main.css" type="text/css" charset="utf-8" />
